	Changed the mce_ attribute prefix to the more standard _mce_ prefix. This is similar to browser vendors prefixes.
	Optimized performance with named entities on Gecko. Regexp replace was executing very slowly probably due to a Gecko bug.
	Optimized performance of the IE specific selection/range implementation.
Version 3.2.7 (2009-09-22)
	Fixed bug where uppercase paragraphs could still produce an invalid DOM tree on IE.
	Fixed bug where split command didn't work on WebKit since the node serializer needs a real document to work with.
	Fixed bug where it was impossible in Gecko to place the caret before a table if it was the first one.
	Fixed bug where linking to urls like ../../ would produce an extra traling slash ../..//.
	Fixed bug where the template cdate functionality was using an old 2.x API call. Patch contributed by vectorjohn.
	Fixed bug where urls to the same site but different protocol would be converted when relative_urls where set to false. Patch contributed by Ted Rust.
	Fixed bug where the paste plugin would remove mceItem prefixed classes.
	Fixed bug where the paste plugin would sometimes add items in a reverse order on WebKit.
	Fixed bug where the paste buttons would present an error message on Gecko even if you changed user.js. Patch contributed by Todd (teeaykay).
	Fixed bug where Opera would crash if you had tables incorrectly placed inside paragraphs.
	Fixed bug where styles elements wasn't properly processed if you had bad input HTML.
	Fixed bug where style attributes wasn't properly forced into a specific format.
	Fixed bug and issues with boolean attributes like checked, nowrap etc.
	Fixed bug where input elements could override attributes on form elements.
	Fixed bug where script or style elements could get modified by the DOMUtils processHTML method.
	Fixed bug where the selected attribute could get lost when force root blocks logic got executed on IE. Patch contributed by Attila Mezei-Horvati.