@@ -22,6 +22,7 @@ Version 3.3b1 (2009-12-xx)
 	Changed the mce_ attribute prefix to the more standard _mce_ prefix. This is similar to browser vendors prefixes.
 	Optimized performance with named entities on Gecko. Regexp replace was executing very slowly probably due to a Gecko bug.
 	Optimized performance of the IE specific selection/range implementation.
+	Removed the safari plugin since we now replaced all text formatting logic to custom code.
 Version 3.2.7 (2009-09-22)
 	Fixed bug where uppercase paragraphs could still produce an invalid DOM tree on IE.
 	Fixed bug where split command didn't work on WebKit since the node serializer needs a real document to work with.
